--- a/css/style.less
+++ b/css/style.less
@@ -2,21 +2,28 @@
 @dark: #373737;
 
 .fade {
-  animation-name: fade;
-  animation-duration: 2.5s;
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 2.5s;
+	animation-name: fade;
+	animation-duration: 2.5s;
+	-webkit-animation-name: fade;
+	-webkit-animation-duration: 2.5s;
 }
 @-webkit-keyframes fade {
-  from {opacity:.1}
-  to {opacity: 1}
+	from {
+		opacity: 0.1;
+	}
+	to {
+		opacity: 1;
+	}
 }
 
-@keyframes fade{
-  from {opacity: .1}
-  to {opacity: 1}
+@keyframes fade {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
-
 
 * {
 	box-sizing: border-box;
@@ -27,47 +34,50 @@
 }
 
 a {
-	color:inherit;
+	color: inherit;
 	text-decoration: none;
-	&:visited, &:hover, &:focus, &:active {
-		text-decoration:none;
-		color:inherit;
+	&:visited,
+	&:hover,
+	&:focus,
+	&:active {
+		text-decoration: none;
+		color: inherit;
 	}
 }
 
 header {
 	width: 100%;
-	height:60px;
+	height: 60px;
 	position: fixed;
-	top:0;
-	background-color: rgba(0,0,0,.4);
+	top: 0;
+	background-color: rgba(0, 0, 0, 0.4);
 	z-index: 10;
 	ul {
 		height: 60px;
-		display:flex;
+		display: flex;
 		list-style-type: none;
 		justify-content: space-around;
 		align-items: center;
 		color: #fff;
-		li{
+		li {
 			&:after {
-				content: '';
+				content: "";
 				display: block;
 				width: 100%;
 				height: 1px;
 				background-color: @main-color;
 				margin-top: 4px;
-				transition:0.4s;
+				transition: 0.4s;
 			}
 			&:before {
-				content: '';
+				content: "";
 				display: block;
 				width: 100%;
 				right: 0;
 				height: 1px;
 				background-color: @main-color;
 				margin-top: 4px;
-				transition:0.4s;
+				transition: 0.4s;
 			}
 		}
 	}
@@ -81,7 +91,7 @@ header {
 		width: 750px;
 		min-height: 300px;
 		border: 6px solid @main-color;
-		background-color: rgba(0,0,0,.4);
+		background-color: rgba(0, 0, 0, 0.4);
 		margin: 0 auto;
 		padding: 40px;
 		margin-top: 180px;
@@ -92,7 +102,7 @@ header {
 			font-size: 22px;
 			font-weight: bold;
 			&:after {
-				content: '';
+				content: "";
 				display: block;
 				width: 10%;
 				height: 3px;
@@ -106,7 +116,6 @@ header {
 			text-transform: uppercase;
 			font-size: 52px;
 			margin-top: 35px;
-
 		}
 		&-descr {
 			color: @main-color;
@@ -119,7 +128,7 @@ header {
 }
 .content {
 	width: 100%;
-	min-height:3200px;
+	min-height: 3200px;
 	background: url(../img/main_bg.jpg);
 	background-position: 50% 30%;
 	.info {
@@ -127,7 +136,7 @@ header {
 		min-height: 580px;
 		background-color: @dark;
 		padding: 50px;
-		box-shadow: 0px 0px 30px rgba(0,0,0, .8);
+		box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.8);
 		&-header {
 			width: 100%;
 			height: 50px;
@@ -139,13 +148,13 @@ header {
 				font-size: 24px;
 				cursor: pointer;
 				&:after {
-					content: '';
+					content: "";
 					display: block;
 					width: 0%;
 					height: 3px;
 					background-color: @main-color;
 					margin-top: 4px;
-					transition:0.4s;
+					transition: 0.4s;
 				}
 				&:hover {
 					&:after {
@@ -159,15 +168,16 @@ header {
 			display: flex;
 			padding-top: 50px;
 			transition: 0.3s;
-			.description, .photo {
+			.description,
+			.photo {
 				width: 50%;
 			}
-			.description{
+			.description {
 				&-title {
 					font-size: 34px;
 					color: @main-color;
 					&:after {
-						content: '';
+						content: "";
 						display: block;
 						width: 20%;
 						height: 3px;
@@ -183,7 +193,7 @@ header {
 				}
 				&-btn {
 					width: 180px;
-					height:45px;
+					height: 45px;
 					line-height: 43px;
 					margin-top: 30px;
 					border: 1px solid @main-color;
@@ -202,14 +212,14 @@ header {
 			.photo {
 				display: flex;
 				align-items: center;
-				img{
+				img {
 					width: 100%;
-					box-shadow: 0px 0px 30px rgba(0,0,0, .8);
+					box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.8);
 				}
 			}
 		}
 		.hide {
-			display:none;
+			display: none;
 		}
 		.show {
 			display: flex;
@@ -232,7 +242,7 @@ header {
 			font-size: 90px;
 			color: @main-color;
 			&:after {
-				content: '';
+				content: "";
 				display: block;
 				width: 20%;
 				height: 1px;
@@ -244,12 +254,12 @@ header {
 	}
 	.slider {
 		margin-top: 150px;
-		position:relative;
+		position: relative;
 		&-title {
 			font-size: 32px;
 			color: @main-color;
 			&:after {
-				content: '';
+				content: "";
 				display: block;
 				width: 10%;
 				height: 1px;
@@ -257,31 +267,31 @@ header {
 				margin-top: 4px;
 			}
 		}
-		.wrap{
+		.wrap {
 			width: 100%;
-			position:relative;
+			position: relative;
 			.slider-item {
 				width: 80%;
 				margin: 0 auto;
 				margin-top: 50px;
 				position: relative;
-				img{
+				img {
 					width: 100%;
 				}
 			}
-			.prev{
-				position:absolute;
+			.prev {
+				position: absolute;
 				cursor: pointer;
 				top: 0;
 				width: 90px;
 				left: 10%;
-				background-color: rgba(0,0,0,.0);
+				background-color: rgba(0, 0, 0, 0);
 				transition: 0.3s;
 				height: 100%;
 				&:hover {
-					background-color: rgba(0,0,0,.4);
-					.arrow-left{
-						opacity:1;
+					background-color: rgba(0, 0, 0, 0.4);
+					.arrow-left {
+						opacity: 1;
 					}
 				}
 				.arrow-left {
@@ -293,23 +303,23 @@ header {
 					top: 50%;
 					left: 50%;
 					transform: translate(-50%);
-					opacity: .4;
+					opacity: 0.4;
 					transition: 1s;
 				}
 			}
 			.next {
-				position:absolute;
+				position: absolute;
 				cursor: pointer;
 				top: 0;
 				width: 90px;
-				background-color: rgba(0,0,0,.0);
+				background-color: rgba(0, 0, 0, 0);
 				transition: 0.3s;
 				height: 100%;
 				right: 10%;
 				&:hover {
-					background-color: rgba(0,0,0,.4);
-					.arrow-right{
-						opacity:1;
+					background-color: rgba(0, 0, 0, 0.4);
+					.arrow-right {
+						opacity: 1;
 					}
 				}
 				.arrow-right {
@@ -321,7 +331,7 @@ header {
 					top: 50%;
 					left: 50%;
 					transform: translate(-50%);
-					opacity: .4;
+					opacity: 0.4;
 					transition: 1s;
 				}
 			}
@@ -334,9 +344,9 @@ header {
 			display: flex;
 			justify-content: center;
 			.dot {
-				cursor:pointer;
-				height:16px;
-				width:16px;
+				cursor: pointer;
+				height: 16px;
+				width: 16px;
 				margin: 0 10px;
 				background-color: @main-color;
 				border-radius: 50%;
@@ -344,8 +354,8 @@ header {
 				transition: background-color 0.6s ease;
 				&-active {
 					background-color: #000;
-					height:18px;
-					width:18px;
+					height: 18px;
+					width: 18px;
 				}
 			}
 		}
@@ -356,7 +366,7 @@ header {
 			font-size: 32px;
 			color: @main-color;
 			&:after {
-				content: '';
+				content: "";
 				display: block;
 				width: 20%;
 				height: 1px;
@@ -371,8 +381,8 @@ header {
 			justify-content: space-between;
 			align-items: center;
 			&-option {
-			font-size: 22px;
-			color: @main-color;
+				font-size: 22px;
+				color: @main-color;
 			}
 			&-input {
 				display: block;
@@ -382,16 +392,15 @@ header {
 				color: @main-color;
 				background-color: transparent;
 				border: none;
-				border-bottom: 1px solid rgba(199,126,48,.6);
+				border-bottom: 1px solid rgba(199, 126, 48, 0.6);
 				font-size: 46px;
 				text-align: center;
-				
 			}
 			select {
 				width: 230px;
 				height: 35px;
 				padding-left: 10px;
-				background-color: rgba(199,126,48,.8);
+				background-color: rgba(199, 126, 48, 0.8);
 				color: #fff;
 				border: none;
 			}
@@ -406,18 +415,17 @@ header {
 				font-size: 46px;
 			}
 		}
-		input[type=number]::-webkit-inner-spin-button,
-		input[type=number]::-webkit-outer-spin-button {
-		    -webkit-appearance: none;
-		    -moz-appearance: none;
-		    appearance: none;
-		    margin: 0;
+		input[type="number"]::-webkit-inner-spin-button,
+		input[type="number"]::-webkit-outer-spin-button {
+			-webkit-appearance: none;
+			-moz-appearance: none;
+			appearance: none;
+			margin: 0;
 		}
 		/* Для Firefox */
-		input[type=number]{
-		  -moz-appearance: textfield;
+		input[type="number"] {
+			-moz-appearance: textfield;
 		}
-
 	}
 	.more {
 		display: block;
@@ -430,7 +438,7 @@ header {
 		font-size: 18px;
 		color: @main-color;
 		cursor: pointer;
-		&:hover{
+		&:hover {
 			box-shadow: 0 0 10px @main-color;
 		}
 	}
@@ -441,7 +449,7 @@ header {
 		background-color: @dark;
 		margin: 0 auto;
 		margin-top: 150px;
-		box-shadow: 0px 0px 30px rgba(0,0,0, .8);
+		box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.8);
 		&-img {
 			width: 50%;
 			img {
@@ -458,13 +466,13 @@ header {
 				font-size: 26px;
 				font-weight: 300;
 				&:after {
-					content: '';
+					content: "";
 					display: block;
 					width: 20%;
 					height: 1px;
 					background-color: @main-color;
 					margin-top: 4px;
-				}			
+				}
 			}
 			form {
 				input {
@@ -485,7 +493,7 @@ header {
 					border: 1px solid @main-color;
 					color: @main-color;
 					cursor: pointer;
-					&:hover{
+					&:hover {
 						box-shadow: 0 0 10px @main-color;
 					}
 				}
@@ -505,9 +513,9 @@ header {
 			.social-block {
 				width: 70px;
 				height: 70px;
-				border: 1px solid rgba(199, 128, 48, .5);
+				border: 1px solid rgba(199, 128, 48, 0.5);
 				margin-right: 15px;
-				&:hover{
+				&:hover {
 					box-shadow: 0 0 10px @main-color;
 				}
 				a {
@@ -522,13 +530,13 @@ header {
 		}
 	}
 }
-.overlay{
+.overlay {
 	position: fixed;
 	display: none;
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,.5);
+	background-color: rgba(0, 0, 0, 0.5);
 	z-index: 3;
 	.popup {
 		position: fixed;
@@ -587,14 +595,30 @@ header {
 				border: none;
 				color: #fff;
 				text-align: center;
-				&::-webkit-input-placeholder {color:#fff;}
-				&::-moz-placeholder {color:#fff;}
-				&:-moz-placeholder {color:#fff;}
-				&:-ms-input-placeholder {color:#fff;}
-				&:focus::-webkit-input-placeholder { color: transparent; }
-				&:focus::-moz-placeholder          { color: transparent; }
-				&:focus:-moz-placeholder           { color: transparent; }
-				&:focus:-ms-input-placeholder      { color: transparent; }
+				&::-webkit-input-placeholder {
+					color: #fff;
+				}
+				&::-moz-placeholder {
+					color: #fff;
+				}
+				&:-moz-placeholder {
+					color: #fff;
+				}
+				&:-ms-input-placeholder {
+					color: #fff;
+				}
+				&:focus::-webkit-input-placeholder {
+					color: transparent;
+				}
+				&:focus::-moz-placeholder {
+					color: transparent;
+				}
+				&:focus:-moz-placeholder {
+					color: transparent;
+				}
+				&:focus:-ms-input-placeholder {
+					color: transparent;
+				}
 			}
 			&__btn {
 				width: 180px;
@@ -606,7 +630,7 @@ header {
 				color: @main-color;
 				border: 1px solid @main-color;
 				cursor: pointer;
-				&:hover{
+				&:hover {
 					box-shadow: 0 0 10px @main-color;
 				}
 			}
